--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
-        "daisyui": "^2.20.0"
+        "daisyui": "^2.20.0",
+        "theme-change": "^2.2.0"
     }
 }
